--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1251,7 +1251,8 @@ main grid 5 post
     height: 100%;
     position: absolute;
     z-index: 1;
-    opacity: .3;
+    opacity: 0.7;
+    box-shadow: inset 0 0 0 2000px #3c3f4dba;
 }
 .jl_grid5_wrapper .jl_grid5_item .jl_grid5_itemin .wrap_box_style_main {
     padding: 25px;
@@ -27835,4 +27836,13 @@ p.has-drop-cap:not(:focus):first-letter {
     .large_center_slider_container.jl_single_slider_box.jl_s_slide_text_wrapper .item {
         height: 750px;
     }
+}
+
+
+
+
+@media only screen and (max-width: 768px) {
+  .only-desktop {
+    display: none !important;
+  }
 }
